[tool.poetry]
name = "recetteconstance"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
PyQt6 = "^6.4.0"
pandas = "^1.5.2"
pandas-profiling = "^3.5.0"
deepdiff = "^6.2.1"
pyarrow = "^10.0.1"
chardet = "^5.1.0"
SQLAlchemy = "^1.4.45"
pyspark = "^3.3.1"
great-expectations = "^0.15.42"
pyinstaller ="^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
